pkg/lang/testdata/ub/stack-values/invalid/locals-resource-reference.ub
locals: { vpc: resource.aws.vpc.main.id }
